# falling-sand-cpu

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
include/falling-sand/: app.h  config.h  input.h  ui.h
include/falling-sand/renderer/: color.h  renderer.h  shader.h
include/falling-sand/simulation/: grid.h  simulation.h
shaders/: shader.fs
src/: app.cpp  input.cpp  main.cpp  ui.cpp
src/renderer/: renderer.cpp  shader.cpp
src/simulation/: grid.cpp  simulation.cpp
